[tool.poetry]
name = "pycounts_lyj"
version = "0.1.0"
description = "A package following the tutorial!"
authors = ["yajing"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.4.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
